# python-final-project

./: .gitignore  README.md  my_address_book.pkl  my_notes.pkl  pyproject.toml  requirements.txt  run.sh
src/: main.py
src/constants/: commands.py
src/handlers/: address_handlers.py  birthday_handlers.py  contact_handlers.py  note_handlers.py
src/models/: address_book.py  fields.py  notes_book.py  record.py
src/ui/: terminal_ui.py
src/utils/: command_help.py  command_suggestions.py  decorators.py  input_parser.py  storage.py
tests/: test_address_book.py  test_address_handlers.py  test_birthday_handlers.py  test_contact_handlers.py  test_note_handlers.py
