[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "address-book"
version = "0.1.0"
description = "A command-line address book application with contact management and note-taking capabilities"
authors = [
    { name = "Andrii Stanislav" }
]
dependencies = [
    "email_validator==2.2.0",
    "thefuzz==0.22.1",
    "tabulate==0.9.0",
    "colorama==0.4.6",
    "pytest==8.0.2",
    "pytest-cov==4.1.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Personal Information Manager",
]

[project.scripts]
address-book = "src.main:main"

[tool.setuptools]
packages = ["src", "src.ui", "src.handlers", "src.utils", "src.models"]

[tool.setuptools.package-data]
src = ["*.pkl"]

[project.urls]
Homepage = "https://github.com/yourusername/address-book"
Repository = "https://github.com/yourusername/address-book.git"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing" 